# universe-templates-mcp

./: .gitignore  DEPLOYMENT.md  Dockerfile  MANUAL_RENDER_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT_SUMMARY.md  app.py  pyproject.toml  render.yaml  requirements.txt  test_imports.py
src/universe_templates/: firebase_client.py  git_utils.py  mock_data.py  models.py  server.py
test_env/: pyvenv.cfg
